--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,115 @@
-telebot
-telepot
-pytube
-schedule
-google-api-python-client==2.24.0
-google-auth==2.3.3
-Pillow==8.3.2
-requests==2.26.0
-google-auth-oauthlib 
-google-auth-httplib2
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.6.2
+appier==1.30.1
+asttokens==2.2.1
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.2.0
+backcall==0.2.0
+Brotli==1.0.9
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.1.3
+comm==0.1.3
+debugpy==1.6.7
+decorator==5.1.1
+exceptiongroup==1.1.1
+executing==1.2.0
+ffmpeg==1.4
+Flask==2.1.2
+frozenlist==1.3.3
+google-api==0.1.12
+google-api-core==2.11.0
+google-api-python-client==2.95.0
+google-auth==2.16.3
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.0
+h11==0.14.0
+httpcore==0.16.3
+httplib2==0.22.0
+httpx==0.24.1
+idna==3.4
+instaloader==4.9.6
+ipykernel==6.22.0
+ipython==8.12.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+JSON-minify==0.3.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+multidict==6.0.4
+mutagen==1.46.0
+nest-asyncio==1.5.6
+numpy==1.24.2
+oauth2client==4.1.3
+oauthlib==3.2.2
+outcome==1.2.0
+packaging==23.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.2.0
+pprintpp==0.4.0
+prompt-toolkit==3.0.38
+protobuf==4.22.1
+psutil==5.9.5
+pure-eval==0.2.2
+pyaes==1.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodomex==3.18.0
+pydantic==2.0.3
+pydantic_core==2.3.0
+Pygments==2.14.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytube==15.0.0
+pytz==2023.3
+pywin32==306
+pyzmq==25.0.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rsa==4.9
+schedule==1.2.0
+scrapetube==2.3.1
+selenium==4.8.3
+six==1.16.0
+slugify==0.0.1
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4
+stack-data==0.6.2
+telebot==0.0.5
+telepot==12.7
+tornado==6.3
+traitlets==5.9.0
+trio==0.22.0
+trio-websocket==0.10.2
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==5.0.1
+ujson==5.7.0
+uritemplate==4.1.1
+urllib3==1.26.9
+wcwidth==0.2.6
+websocket-client==1.3.1
+websockets==10.4
+Werkzeug==2.2.3
+wsproto==1.2.0
+yarl==1.8.2
 Flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.1
